force-app/main/default/objects/Training_Template__c/Training_Template__c.object-meta.xml
<CustomObject>
    <label>Training Template</label>
    <nameField>
        <label>Project Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>