force-app/main/default/objects/Training_Template__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Training_Plan__c</referenceTo>
    <relationshipLabel>Training Templates</relationshipLabel>
    <relationshipName>Training_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>